--- a/TheRideYouRent/Views/Inspectors/Index.cshtml
+++ b/TheRideYouRent/Views/Inspectors/Index.cshtml
@@ -1,4 +1,5 @@
-﻿@model IEnumerable<TheRideYouRent.Models.Inspector>
+﻿@page
+@model IEnumerable<TheRideYouRent.Models.Inspector>
 
 @{
     ViewData["Title"] = "Index";
@@ -7,19 +8,19 @@
 <h1>Index</h1>
 
 <p>
-    <a asp-action="Create">Create New</a>
+    <a asp-page="Create">Create New</a>
 </p>
 <table class="table">
     <thead>
         <tr>
             <th>
-                @Html.DisplayNameFor(model => model.name)
+                @Html.DisplayNameFor(model => model.Name)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.email)
+                @Html.DisplayNameFor(model => model.Email)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.cellNumber)
+                @Html.DisplayNameFor(model => model.CellNumber)
             </th>
             <th></th>
         </tr>
@@ -28,18 +29,18 @@
 @foreach (var item in Model) {
         <tr>
             <td>
-                @Html.DisplayFor(modelItem => item.name)
+                @Html.DisplayFor(modelItem => item.Name)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.email)
+                @Html.DisplayFor(modelItem => item.Email)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.cellNumber)
+                @Html.DisplayFor(modelItem => item.CellNumber)
             </td>
             <td>
-                <a asp-action="Edit" asp-route-id="@item.inspectorId">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.inspectorId">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.inspectorId">Delete</a>
+                <a asp-page="./Edit" asp-route-id="@item.InspectorId">Edit</a> |
+                <a asp-page="./Details" asp-route-id="@item.InspectorId">Details</a> |
+                <a asp-page="./Delete" asp-route-id="@item.InspectorId">Delete</a>
             </td>
         </tr>
 }
