--- a/TheRideYouRent/Views/Cars/Delete.cshtml
+++ b/TheRideYouRent/Views/Cars/Delete.cshtml
@@ -1,4 +1,5 @@
-﻿@model TheRideYouRent.Models.Car
+﻿@page
+@model TheRideYouRent.Models.Car
 
 @{
     ViewData["Title"] = "Delete";
@@ -11,47 +12,47 @@
     <h4>Car</h4>
     <hr />
     <dl class="row">
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.make)
+        <dt class="col-sm-2">
+            @Html.DisplayNameFor(model => model.Make)
         </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.make)
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.Make)
         </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.model)
+        <dt class="col-sm-2">
+            @Html.DisplayNameFor(model => model.Model)
         </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.model)
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.Model)
         </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.bodyType)
+        <dt class="col-sm-2">
+            @Html.DisplayNameFor(model => model.BodyType)
         </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.bodyType)
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.BodyType)
         </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.kilometersTravelled)
+        <dt class="col-sm-2">
+            @Html.DisplayNameFor(model => model.KilometersTravelled)
         </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.kilometersTravelled)
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.KilometersTravelled)
         </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.serviceKilometers)
+        <dt class="col-sm-2">
+            @Html.DisplayNameFor(model => model.ServiceKilometers)
         </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.serviceKilometers)
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.ServiceKilometers)
         </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.available)
+        <dt class="col-sm-2">
+            @Html.DisplayNameFor(model => model.Available)
         </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.available)
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.Available)
         </dd>
     </dl>
     
-    <form asp-action="Delete">
-        <input type="hidden" asp-for="carId" />
+    <form method="post">
+        <input type="hidden" asp-for="CarId" />
         <input type="submit" value="Delete" class="btn btn-danger" /> |
-        <a asp-action="Index">Back to List</a>
+        <a asp-page="./Index">Back to List</a>
     </form>
 </div>
