--- a/TheRideYouRent/Views/Drivers/Details.cshtml
+++ b/TheRideYouRent/Views/Drivers/Details.cshtml
@@ -1,4 +1,5 @@
-﻿@model TheRideYouRent.Models.Driver
+﻿@page
+@model TheRideYouRent.Models.Driver
 
 @{
     ViewData["Title"] = "Details";
@@ -10,33 +11,33 @@
     <h4>Driver</h4>
     <hr />
     <dl class="row">
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.name)
+        <dt class="col-sm-2">
+            @Html.DisplayNameFor(model => model.Name)
         </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.name)
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.Name)
         </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.address)
+        <dt class="col-sm-2">
+            @Html.DisplayNameFor(model => model.Address)
         </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.address)
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.Address)
         </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.email)
+        <dt class="col-sm-2">
+            @Html.DisplayNameFor(model => model.Email)
         </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.email)
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.Email)
         </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.cellNumber)
+        <dt class="col-sm-2">
+            @Html.DisplayNameFor(model => model.CellNumber)
         </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.cellNumber)
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.CellNumber)
         </dd>
     </dl>
 </div>
 <div>
-    <a asp-action="Edit" asp-route-id="@Model.driverId">Edit</a> |
-    <a asp-action="Index">Back to List</a>
+    <a asp-page="./Edit" asp-route-id="@Model.DriverId">Edit</a> |
+    <a asp-page="./Index">Back to List</a>
 </div>
