--- a/TheRideYouRent/Views/Drivers/Index.cshtml
+++ b/TheRideYouRent/Views/Drivers/Index.cshtml
@@ -1,4 +1,5 @@
-﻿@model IEnumerable<TheRideYouRent.Models.Driver>
+﻿@page
+@model IEnumerable<TheRideYouRent.Models.Driver>
 
 @{
     ViewData["Title"] = "Index";
@@ -7,22 +8,22 @@
 <h1>Index</h1>
 
 <p>
-    <a asp-action="Create">Create New</a>
+    <a asp-page="Create">Create New</a>
 </p>
 <table class="table">
     <thead>
         <tr>
             <th>
-                @Html.DisplayNameFor(model => model.name)
+                @Html.DisplayNameFor(model => model.Name)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.address)
+                @Html.DisplayNameFor(model => model.Address)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.email)
+                @Html.DisplayNameFor(model => model.Email)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.cellNumber)
+                @Html.DisplayNameFor(model => model.CellNumber)
             </th>
             <th></th>
         </tr>
@@ -31,21 +32,21 @@
 @foreach (var item in Model) {
         <tr>
             <td>
-                @Html.DisplayFor(modelItem => item.name)
+                @Html.DisplayFor(modelItem => item.Name)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.address)
+                @Html.DisplayFor(modelItem => item.Address)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.email)
+                @Html.DisplayFor(modelItem => item.Email)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.cellNumber)
+                @Html.DisplayFor(modelItem => item.CellNumber)
             </td>
             <td>
-                <a asp-action="Edit" asp-route-id="@item.driverId">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.driverId">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.driverId">Delete</a>
+                <a asp-page="./Edit" asp-route-id="@item.DriverId">Edit</a> |
+                <a asp-page="./Details" asp-route-id="@item.DriverId">Details</a> |
+                <a asp-page="./Delete" asp-route-id="@item.DriverId">Delete</a>
             </td>
         </tr>
 }
