--- a/TheRideYouRent/Views/Inspectors/Delete.cshtml
+++ b/TheRideYouRent/Views/Inspectors/Delete.cshtml
@@ -1,4 +1,5 @@
-﻿@model TheRideYouRent.Models.Inspector
+﻿@page
+@model TheRideYouRent.Models.Inspector
 
 @{
     ViewData["Title"] = "Delete";
@@ -11,29 +12,29 @@
     <h4>Inspector</h4>
     <hr />
     <dl class="row">
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.name)
+        <dt class="col-sm-2">
+            @Html.DisplayNameFor(model => model.Name)
         </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.name)
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.Name)
         </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.email)
+        <dt class="col-sm-2">
+            @Html.DisplayNameFor(model => model.Email)
         </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.email)
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.Email)
         </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.cellNumber)
+        <dt class="col-sm-2">
+            @Html.DisplayNameFor(model => model.CellNumber)
         </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.cellNumber)
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.CellNumber)
         </dd>
     </dl>
     
-    <form asp-action="Delete">
-        <input type="hidden" asp-for="inspectorId" />
+    <form method="post">
+        <input type="hidden" asp-for="InspectorId" />
         <input type="submit" value="Delete" class="btn btn-danger" /> |
-        <a asp-action="Index">Back to List</a>
+        <a asp-page="./Index">Back to List</a>
     </form>
 </div>
