--- a/TheRideYouRent/Views/Returns/Create.cshtml
+++ b/TheRideYouRent/Views/Returns/Create.cshtml
@@ -1,4 +1,5 @@
-﻿@model TheRideYouRent.Models.Return
+﻿@page
+@model TheRideYouRent.Models.Return
 
 @{
     ViewData["Title"] = "Create";
@@ -10,22 +11,22 @@
 <hr />
 <div class="row">
     <div class="col-md-4">
-        <form asp-action="Create">
+        <form method="post">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
-                <label asp-for="rentalId" class="control-label"></label>
-                <input asp-for="rentalId" class="form-control" />
-                <span asp-validation-for="rentalId" class="text-danger"></span>
+                <label asp-for="RentalId" class="control-label"></label>
+                <input asp-for="RentalId" class="form-control" />
+                <span asp-validation-for="RentalId" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="returnDate" class="control-label"></label>
-                <input asp-for="returnDate" class="form-control" />
-                <span asp-validation-for="returnDate" class="text-danger"></span>
+                <label asp-for="ReturnDate" class="control-label"></label>
+                <input asp-for="ReturnDate" class="form-control" />
+                <span asp-validation-for="ReturnDate" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="fine" class="control-label"></label>
-                <input asp-for="fine" class="form-control" />
-                <span asp-validation-for="fine" class="text-danger"></span>
+                <label asp-for="Fine" class="control-label"></label>
+                <input asp-for="Fine" class="form-control" />
+                <span asp-validation-for="Fine" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary" />
@@ -35,7 +36,7 @@
 </div>
 
 <div>
-    <a asp-action="Index">Back to List</a>
+    <a asp-page="Index">Back to List</a>
 </div>
 
 @section Scripts {
