--- a/TheRideYouRent/Views/Returns/Delete.cshtml
+++ b/TheRideYouRent/Views/Returns/Delete.cshtml
@@ -1,4 +1,5 @@
-﻿@model TheRideYouRent.Models.Return
+﻿@page
+@model TheRideYouRent.Models.Return
 
 @{
     ViewData["Title"] = "Delete";
@@ -11,29 +12,29 @@
     <h4>Return</h4>
     <hr />
     <dl class="row">
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.rentalId)
+        <dt class="col-sm-2">
+            @Html.DisplayNameFor(model => model.RentalId)
         </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.rentalId)
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.RentalId)
         </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.returnDate)
+        <dt class="col-sm-2">
+            @Html.DisplayNameFor(model => model.ReturnDate)
         </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.returnDate)
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.ReturnDate)
         </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.fine)
+        <dt class="col-sm-2">
+            @Html.DisplayNameFor(model => model.Fine)
         </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.fine)
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.Fine)
         </dd>
     </dl>
     
-    <form asp-action="Delete">
-        <input type="hidden" asp-for="returnId" />
+    <form method="post">
+        <input type="hidden" asp-for="ReturnId" />
         <input type="submit" value="Delete" class="btn btn-danger" /> |
-        <a asp-action="Index">Back to List</a>
+        <a asp-page="./Index">Back to List</a>
     </form>
 </div>
