--- a/TheRideYouRent/Views/Returns/Details.cshtml
+++ b/TheRideYouRent/Views/Returns/Details.cshtml
@@ -1,4 +1,5 @@
-﻿@model TheRideYouRent.Models.Return
+﻿@page
+@model TheRideYouRent.Models.Return
 
 @{
     ViewData["Title"] = "Details";
@@ -10,27 +11,27 @@
     <h4>Return</h4>
     <hr />
     <dl class="row">
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.rentalId)
+        <dt class="col-sm-2">
+            @Html.DisplayNameFor(model => model.RentalId)
         </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.rentalId)
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.RentalId)
         </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.returnDate)
+        <dt class="col-sm-2">
+            @Html.DisplayNameFor(model => model.ReturnDate)
         </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.returnDate)
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.ReturnDate)
         </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.fine)
+        <dt class="col-sm-2">
+            @Html.DisplayNameFor(model => model.Fine)
         </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.fine)
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.Fine)
         </dd>
     </dl>
 </div>
 <div>
-    <a asp-action="Edit" asp-route-id="@Model.returnId">Edit</a> |
-    <a asp-action="Index">Back to List</a>
+    <a asp-page="./Edit" asp-route-id="@Model.ReturnId">Edit</a> |
+    <a asp-page="./Index">Back to List</a>
 </div>
