Fixed runtime error by converting razor pages into controller actions

--- a/TheRideYouRent/Views/Cars/Index.cshtml
+++ b/TheRideYouRent/Views/Cars/Index.cshtml
@@ -8,7 +8,7 @@
 <h1>Index</h1>
 
 <p>
-    <a asp-page="Create">Create New</a>
+    <a asp-action="Create">Create New</a>
 </p>
 <table class="table">
     <thead>
@@ -56,9 +56,9 @@
                 @Html.DisplayFor(modelItem => item.Available)
             </td>
             <td>
-                <a asp-page="./Edit" asp-route-id="@item.CarId">Edit</a> |
-                <a asp-page="./Details" asp-route-id="@item.CarId">Details</a> |
-                <a asp-page="./Delete" asp-route-id="@item.CarId">Delete</a>
+                <a asp-action="./Edit" asp-route-id="@item.CarId">Edit</a> |
+                <a asp-action="./Details" asp-route-id="@item.CarId">Details</a> |
+                <a asp-action="./Delete" asp-route-id="@item.CarId">Delete</a>
             </td>
         </tr>
 }
