--- a/TheRideYouRent/Views/Cars/Delete.cshtml
+++ b/TheRideYouRent/Views/Cars/Delete.cshtml
@@ -53,6 +53,6 @@
     <form method="post">
         <input type="hidden" asp-for="CarId" />
         <input type="submit" value="Delete" class="btn btn-danger" /> |
-        <a asp-page="./Index">Back to List</a>
+        <a asp-action="Index">Back to List</a>
     </form>
 </div>
