--- a/TheRideYouRent/Views/Drivers/Delete.cshtml
+++ b/TheRideYouRent/Views/Drivers/Delete.cshtml
@@ -41,6 +41,6 @@
     <form method="post">
         <input type="hidden" asp-for="DriverId" />
         <input type="submit" value="Delete" class="btn btn-danger" /> |
-        <a asp-page="./Index">Back to List</a>
+        <a asp-action="Index">Back to List</a>
     </form>
 </div>
