--- a/TheRideYouRent/Views/Drivers/Details.cshtml
+++ b/TheRideYouRent/Views/Drivers/Details.cshtml
@@ -38,6 +38,6 @@
     </dl>
 </div>
 <div>
-    <a asp-page="./Edit" asp-route-id="@Model.DriverId">Edit</a> |
-    <a asp-page="./Index">Back to List</a>
+    <a asp-action="Edit" asp-route-id="@Model.DriverId">Edit</a> |
+    <a asp-action="Index">Back to List</a>
 </div>
