--- a/TheRideYouRent/Views/Inspectors/Details.cshtml
+++ b/TheRideYouRent/Views/Inspectors/Details.cshtml
@@ -32,6 +32,6 @@
     </dl>
 </div>
 <div>
-    <a asp-page="./Edit" asp-route-id="@Model.InspectorId">Edit</a> |
-    <a asp-page="./Index">Back to List</a>
+    <a asp-action="Edit" asp-route-id="@Model.InspectorId">Edit</a> |
+    <a asp-action="Index">Back to List</a>
 </div>
