--- a/TheRideYouRent/Views/Rentals/Details.cshtml
+++ b/TheRideYouRent/Views/Rentals/Details.cshtml
@@ -49,6 +49,6 @@
     </dl>
 </div>
 <div>
-    <a asp-page="./Edit" asp-route-id="@Model.RentalId">Edit</a> |
-    <a asp-page="./Index">Back to List</a>
+    <a asp-action="Edit" asp-route-id="@Model.RentalId">Edit</a> |
+    <a asp-action="Index">Back to List</a>
 </div>
