--- a/TheRideYouRent/Views/Rentals/Index.cshtml
+++ b/TheRideYouRent/Views/Rentals/Index.cshtml
@@ -8,7 +8,7 @@
 <h1>Index</h1>
 
 <p>
-    <a asp-page="Create">Create New</a>
+    <a asp-action="Create">Create New</a>
 </p>
 <table class="table">
     <thead>
@@ -56,9 +56,9 @@
                 @Html.DisplayFor(modelItem => item.EndDate)
             </td>
             <td>
-                <a asp-page="./Edit" asp-route-id="@item.RentalId">Edit</a> |
-                <a asp-page="./Details" asp-route-id="@item.RentalId">Details</a> |
-                <a asp-page="./Delete" asp-route-id="@item.RentalId">Delete</a>
+                <a asp-action="Edit" asp-route-id="@item.RentalId">Edit</a> |
+                <a asp-action="Details" asp-route-id="@item.RentalId">Details</a> |
+                <a asp-action="Delete" asp-route-id="@item.RentalId">Delete</a>
             </td>
         </tr>
 }
