--- a/TheRideYouRent/Views/Returns/Delete.cshtml
+++ b/TheRideYouRent/Views/Returns/Delete.cshtml
@@ -35,6 +35,6 @@
     <form method="post">
         <input type="hidden" asp-for="ReturnId" />
         <input type="submit" value="Delete" class="btn btn-danger" /> |
-        <a asp-page="./Index">Back to List</a>
+        <a asp-action="Index">Back to List</a>
     </form>
 </div>
